--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+li {
+  list-style-type: none;
+  text-align: justify;
+  padding: 5px;
+  margin: 5px;
+  background-color: white;
+  border-radius: 7px;
+}
+
+ul {
+  padding-left: 5px;
+}
+
 body {
   background-image: url("./back.jpg");
   background-position: inherit;
@@ -41,7 +54,7 @@ body {
   background-color: rgba(71, 40, 22, 0.712);
   width: 100%;
   text-align: center;
-  border-radius: 5px;
+  border-radius: 7px;
   z-index: -1;
 }
 
@@ -58,16 +71,48 @@ body {
 }
 
 .projectName .projectNameInput input {
-  width: 100%;
-  font-size: clamp(10px, 4vw, 40px);
   opacity: 0;
   font-family: "EB Garamond", serif;
   cursor: pointer;
   text-align: center;
+  width: 100%;
+  font-size: clamp(10px, 4vw, 40px);
 }
 
-.projectName .showNameInput {
+.showNameInput {
   opacity: 1 !important;
+}
+
+.listName {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.listName .listNamePar {
+  position: absolute;
+}
+
+.listName .listNamePar p {
+  font-size: 20px;
+  margin: 12px;
+  font-family: "EB Garamond", serif;
+}
+
+.listName .listNameInput {
+  padding: 10px;
+  z-index: 1;
+}
+
+.listName .listNameInput input {
+  opacity: 0;
+  font-family: "EB Garamond", serif;
+  cursor: pointer;
+  text-align: center;
+  font-size: 20px;
 }
 
 .addNewListContainer {
