create lists and tasks, dnd without visual effects

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,33 +1,4 @@
-$fontPlannerName: 'The Nautigal', cursive;
-$fontProjectName: 'EB Garamond', serif;
-$fontText: 'Roboto', sans-serif;
-$fintSizeListName: 20px;
-$projectNameBackground: rgba(71, 40, 22, 0.712);
-$listsBackground: rgba(255, 255, 255, 0.603);
-$tasksCardWidth: 230px;
-$borderRadius: 7px;
-
-
-
-@mixin inputForNames {
-    opacity: 0;
-    font-family: $fontProjectName;
-    cursor: pointer;
-    text-align: center;
-}
-
-li  {
-    list-style-type: none;
-    text-align: justify;
-    padding: 5px;
-    margin: 5px;
-    background-color: rgb(255, 255, 255);
-    border-radius: $borderRadius;
-}
-
-ul {
-    padding-left: 5px;
-}
+@import "mixinsAndparameters";
 
 body {
   background-image: url("./back.jpg");
@@ -36,16 +7,28 @@ body {
   background-attachment: fixed;
 }
 
+.projectName {
+  @include nameOfElem(
+    $fontSize: clamp(10px, 4vw, 40px), 
+    $fontFamily: $fontProjectName,
+    $inputWidth: 700px,
+    $fontColor: white
+    );
+}
+
+.listName {
+  @include nameOfElem(
+    $fontSize: $fontSizeListName, 
+    $fontFamily: $fontProjectName,
+    $inputWidth: none,
+    $fontColor: none
+    );
+}
+
 .App h1 {
   font-family: $fontPlannerName;
   color: rgba(0, 174, 255, 0.699);
   margin: 0;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-  position: relative;
 }
 
 .plannerHeaderContainer {
@@ -58,69 +41,9 @@ body {
   }
 }
 
-.projectName {
-
-  & > div {
-    width: 55%;
-    position: relative;
-  }
-
-  & .projectNameHeader > div {
-    position: absolute;
-    background-color: $projectNameBackground;
-    width: 100%;
-    text-align: center;
-    border-radius: $borderRadius;
-    z-index: -1;
-  }
-
-  & .projectNameHeader p {
-    margin: 0;
-    padding-top: 2px;
-    font-size: clamp(10px, 4vw, 40px);
-    font-family: $fontProjectName;
-    color: #fff;
-  }
-
-  & .projectNameInput {
-    z-index: 1;
-  }
-  
-  & .projectNameInput input {
-    @include inputForNames;
-    width: 100%;
-    font-size: clamp(10px, 4vw, 40px);
-  }
-}
-
 .showNameInput {
     opacity: 1 !important;
   }
-
-.listName {
-        display: flex;
-        justify-content: center;
-
-    & .listNamePar {
-        position: absolute;
-
-        & p {
-            font-size: $fintSizeListName;
-            margin: 12px;
-            font-family: $fontProjectName;
-            
-        }
-    }
-    & .listNameInput {
-        padding: 10px;
-        z-index: 1;
-
-        & input {
-            @include inputForNames;
-            font-size: $fintSizeListName;
-        }
-    }
-}
 
 .addNewListContainer {
   position: relative;
