--- a/src/stylesheets/scss/App.scss
+++ b/src/stylesheets/scss/App.scss
@@ -1,10 +1,11 @@
 @import "mixinsAndparameters";
 
 body {
-  background-image: url("./back.jpg");
+  background-image: url("../../images/back.jpg");
   background-position: inherit;
   background-size: cover;
   background-attachment: fixed;
+  width: min-content;
 }
 
 .projectName {
